# avatar-deployment

./: .check-yaml-ignore  .gitignore  .pre-commit-config.yaml  .yamllint  AGENTS.md  Makefile  README.md  SEAWEEDFS_MIGRATION_PLAN.md  helm.just  justfile  sync-templates.py
deployment-tool/: .gitignore  AGENTS.md  DEVELOPMENT.md  Dockerfile  README.md  config.example.yaml  environments.example.yaml  justfile  pyproject.toml
deployment-tool/src/octopize_avatar_deploy/: __init__.py  cli_test_harness.py  components.py  configure.py  defaults.yaml  deployment_mode.py  download_templates.py  generate_env.py  generate_env_paths.py  input_gatherer.py  output_spec.py  printer.py  public_url.py  state_manager.py  template_provisioning.py  topology_urls.py  version_compat.py
deployment-tool/src/octopize_avatar_deploy/steps/: __init__.py  api_local_source.py  authentik.py  authentik_blueprint.py  base.py  component_selection.py  database.py  email.py  local_source.py  logging.py  nginx.py  required.py  storage.py  target_environment.py  telemetry.py  user.py
deployment-tool/tests/: QUICK_REFERENCE.md  TESTING.md  TESTING_GUIDE.md  __init__.py  conftest.py  test_cli_harness.py
deployment-tool/tests/fixtures/: __init__.py
deployment-tool/tests/fixtures/basic_deployment/: input.yaml  output.txt
deployment-tool/tests/fixtures/basic_deployment/expected/: .deployment-state.yaml  .env  docker-compose.yml
deployment-tool/tests/fixtures/cloud_storage/: input.yaml  output.txt
deployment-tool/tests/fixtures/cloud_storage/expected/: .deployment-state.yaml  .env  docker-compose.yml
deployment-tool/tests/fixtures/config_not_found/: output.txt
deployment-tool/tests/fixtures/config_round_trip_first/expected/: .deployment-state.yaml  .env  deployment-config.yaml  docker-compose.yml
deployment-tool/tests/fixtures/config_round_trip_second/expected/: .deployment-state.yaml  .env  docker-compose.yml
deployment-tool/tests/fixtures/deploy_help/: output.txt
deployment-tool/tests/fixtures/dev_mode_deployment/: input.yaml  output.txt
deployment-tool/tests/fixtures/generate_env_help/: output.txt
deployment-tool/tests/fixtures/generate_env_output_dir_error/: output.txt
deployment-tool/tests/fixtures/help/: output.txt
deployment-tool/tests/fixtures/invalid_port_config/: config.yaml  output.txt
deployment-tool/tests/fixtures/invalid_url_config/: config.yaml  output.txt
deployment-tool/tests/fixtures/malformed_yaml/: config.yaml  output.txt
deployment-tool/tests/fixtures/missing_subcommand/: output.txt
deployment-tool/tests/fixtures/missing_templates/: output.txt
deployment-tool/tests/fixtures/no_telemetry/: input.yaml  output.txt
deployment-tool/tests/fixtures/non_interactive_complete/: config.yaml  output.txt
deployment-tool/tests/fixtures/non_interactive_incomplete_config/: output.txt
deployment-tool/tests/fixtures/non_interactive_partial_config/: output.txt
deployment-tool/tests/fixtures/output_dir_nested/: output.txt
deployment-tool/tests/fixtures/resume_interrupted/: input_first_run.yaml  input_resume.yaml
deployment-tool/tests/fixtures/save_config_interactive/: output.txt
deployment-tool/tests/fixtures/save_config_with_existing/: input.yaml  output.txt
deployment-tool/tests/fixtures/template_from_local_verbose/: output.txt
deployment-tool/tests/fixtures/template_source_empty/: output.txt
deployment-tool/tests/fixtures/template_source_not_found/: output.txt
deployment-tool/tests/fixtures/type_mismatch_config/: config.yaml  output.txt
deployment-tool/tests/integration/: README.md  __init__.py  test_cli_integration.py  test_generate_env.py
deployment-tool/tests/steps/: test_api_local_source.py  test_authentik.py  test_authentik_blueprint.py  test_base.py  test_component_selection.py  test_email.py  test_local_source.py  test_nginx.py  test_required.py  test_state_manager.py  test_storage.py  test_target_environment.py  test_telemetry.py  test_user.py  test_user_validation.py
deployment-tool/tests/unit/: test_components.py  test_deployment_configurator.py  test_deployment_runner.py  test_generate_env_cli.py  test_generic_prompt.py  test_input_gatherer.py  test_output_spec.py  test_printer.py  test_public_url.py  test_rich_implementations.py  test_step_filtering.py  test_topology_urls.py  test_version_validation.py
docker/: .env.template  (+6 more)
docker/deployment-tool/: .gitignore  ARCHITECTURE.md  EXAMPLE_NEW_STEPS.py  IMPLEMENTATION_NOTES.md  QUICKSTART.md  README.md  README_OLD.md  config.example.yaml  justfile  pyproject.toml
docker/deployment-tool/docs/: ABSTRACTIONS.md  INPUT_OUTPUT_ABSTRACTION.md
docker/deployment-tool/examples/: demo_rich_ui.py
docker/deployment-tool/src/octopize_avatar_deploy/: __init__.py  cli_test_harness.py  configure.py  defaults.yaml  download_templates.py  input_gatherer.py  printer.py  state_manager.py  version_compat.py
docker/deployment-tool/tests/: MISSING_CLI_TESTS.md  QUICK_REFERENCE.md  TESTING_GUIDE.md  conftest.py  test_abstraction_integration.py  test_cli_harness.py  test_deployment_configurator.py  test_deployment_runner.py  test_printer_integration.py  test_rich_implementations.py
docker/deployment-tool/tests/fixtures/: __init__.py
docker/deployment-tool/tests/integration/: test_cli_integration.py
docker/deployment-tool/tests/steps/: test_authentik.py  test_database.py  test_email.py  test_logging.py  test_required.py  test_state_manager.py  test_storage.py  test_telemetry.py  test_user.py  test_user_validation.py
docker/deployment-tool/tests/unit/: test_deployment_configurator.py  test_deployment_runner.py  test_input_gatherer.py  test_printer.py  test_version_validation.py
scripts/authentik-blueprint/: README.md  pyproject.toml
scripts/authentik-blueprint/src/authentik_blueprint/: __init__.py  cli.py  converter.py  live_verifier.py  schema_checker.py  validator.py
scripts/authentik-blueprint/tests/: test_converter.py  test_live_verifier.py  test_schema_checker.py  test_validator.py
scripts/authentik-blueprint/tests/fixtures/: expected-output.yaml  expected-sample.yaml  input-sample.yaml
(+177 files in other folders)
